# FormChecker

./: .env  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
FormChecker/: apps.py  asgi.py  db_script.py  fixture.json  models.py  serializers.py  settings.py  settings_dev.py  test_script.py  urls.py  views.py  wsgi.py
FormChecker/migrations/: 0001_initial.py  0002_alter_formtemplate_tel_number.py
