[tool.poetry]
name = "formchecker"
version = "0.1.0"
description = ""
authors = ["egor187 <py.egor.py@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"
psycopg2 = "^2.9.1"
python-dotenv = "^0.18.0"
djangorestframework = "^3.12.4"
django-debug-toolbar = "^3.2.1"
requests = "^2.26.0"
pydantic = {extras = ["email"], version = "^1.8.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
